# redirect-service

./: .env  Cargo.toml  LICENSE  README.md  docker-compose.yml
migrations/: 0001_create_urls.sql
src/: lib.rs  main.rs
src/api/: handler.rs
src/model/: errors.rs  mod.rs  short_key.rs  url.rs
src/repository/: url_repository.rs
src/service/: key_service.rs  mod.rs  url_service.rs
tests/: api_tests.rs  repository_tests.rs  short_key_tests.rs  url_service_tests.rs
