[package]
name = "redirect-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "http2", "macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
rand = "0.8"
dotenv = "0.15"
thiserror = "2.0.18"
tower = "0.4"
serde_json = "1"

[[test]]
name = "api_tests"
path = "tests/api_tests.rs"

[[test]]
name = "short_key_tests"
path = "tests/short_key_tests.rs"

[[test]]
name = "repository_tests"
path = "tests/repository_tests.rs"

[[test]]
name = "url_service_tests"
path = "tests/url_service_tests.rs"
